# snatchbot

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
include/: TextDetector.h  TextRecognizer.h  letter_node.h  letter_node_utils.h  snatchable_word_generator.h  text_detector.h  text_recognizer.h
src/: main.cpp
tests/: test_letter_node.cpp  test_letter_node_utils.cpp  test_main.cpp  test_snatchable_word_generator.cpp
